--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+    font-family: serif, emoji, sans-serif !important;
+}
+
 .bg-sky {
     background-color: #232741 !important;
 }
@@ -15,6 +19,19 @@
     text-shadow: -1px 4px 1px darkcyan;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: fantasy;
+}
+
+.doacao {
+    box-shadow: 0px 2px 2px 0px darkcyan;
+}
+
 nav {
     padding: 1em;
 }
@@ -23,6 +40,12 @@ nav {
     position: absolute;
     width: 100%;
     height: 8em;
+}
+
+#box-text {
+    background-color: lightgrey;
+    border-radius: 1em;
+    border: 1px solid cadetblue;
 }
 
 main {
